Fixed header scrolling issue / added Layout
Header was not showing up after scrolling
Changed from sticky to absolute
Added in Layout and reworked _app to use Layout

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -41,6 +41,7 @@
   .typing-desktop {
     width: 18ch;
     animation: typing 2.5s steps(18), blink 0.5s step-end infinite alternate;
+    animation-delay: 0.1s;
     white-space: nowrap;
     overflow: hidden;
     border-right: 2px solid;
